Fix the messed up spacing by adding </div> back
When I copied and pasted the icons into the cards I must have
accidentally deleted the closing div tag for each one, which made
things upset.

--- a/style.css
+++ b/style.css
@@ -138,9 +138,15 @@ input[type="search"] {
 
 .projects {
     grid-row: 1 / 3;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
 }
 
 .cards {
     display: grid;
     grid-template: 1fr 1fr 1fr / 1fr 1fr;
+}
+
+.announcements {
+    grid-column: 2 / 3;
 }
